# MotionHighlighter

./: CMakeCache.txt  CMakeLists.txt  Dockerfile  FaceDetector.cpp  Makefile  MotionHighlighter  app.py  cmake_install.cmake  main.cpp  main.py  motion-highlighter-manifest.yaml  script.sh
include/: FaceDetector.h
input/: demo-video.webm
output/moment-1/: vid-112.000000.avi
output/moment-2/: vid-307.000000.avi
output/moment-3/: vid-2151.000000.avi
static/output/: vidInfo.json
templates/: base.html  index.html  output.html
